--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -24,6 +24,11 @@ button {
   flex: 2;
   background: var(--bg-soft);
 }
+.login-right img {
+  width: 100%;
+  height: 99%;
+  object-fit: cover;
+}
 
 @media (max-width: 768px) {
   .login-right {
