--- a/client/src/pages/placeList/placeList.css
+++ b/client/src/pages/placeList/placeList.css
@@ -22,19 +22,29 @@
 
 .search {
   height: 40px;
+  width: 200px;
   background-color: var(--bg-soft);
   border-radius: 20px;
   padding: 0 20px;
   font-size: 14px;
   border: none;
+  cursor: pointer;
   outline: none;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
 }
 
 .filterList {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  align-items: end;
+  gap: 20px;
+}
+
+.filterList input,
+select {
+  padding: 8px;
+  border-radius: 4px;
+  border: 1px solid var(--text-soft);
+  width: 200px;
 }
 
 .filterType {
@@ -55,6 +65,11 @@
 }
 
 @media (max-width: 768px) {
+  .filterList {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+  }
   .rightPlaceList {
     display: none;
   }
