feat(api/logout,client/page): logout, profile page add , frontend routes protect

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -25,6 +25,7 @@ a span {
 nav div {
   display: flex;
   gap: 40px;
+  align-items: center;
 }
 
 a {
@@ -33,6 +34,13 @@ a {
 a:hover {
   scale: 1.02;
   color: blue;
+}
+
+.navAvatar {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  border: none;
 }
 
 @media (max-width: 768px) {
