--- a/client/src/pages/profile/userProfile.css
+++ b/client/src/pages/profile/userProfile.css
@@ -4,7 +4,7 @@
   display: flex;
   gap: 20px;
 }
-.leftProfile {
+.leftUserProfile {
   flex: 3;
   display: flex;
   align-items: center;
@@ -12,8 +12,9 @@
   justify-content: center;
   gap: 20px;
 }
-input,
-button {
+
+.leftUserProfile input,
+.leftUserProfile button {
   padding: 8px;
   border-radius: 4px;
   border: 1px solid var(--text-soft);
@@ -29,7 +30,7 @@ button {
   gap: 20px;
 }
 
-img {
+.prevImg {
   width: 200px;
   height: 200px;
   border: 1px solid var(--text-soft);
