create post page add

--- a/client/src/pages/profile/userProfile.css
+++ b/client/src/pages/profile/userProfile.css
@@ -37,3 +37,9 @@
   object-fit: cover;
   border-radius: 20px;
 }
+
+.rightProfile a {
+  padding: 8px;
+  border-radius: 4px;
+  border: 1px solid var(--text-soft);
+}
