--- a/client/src/pages/placeDetails/placeDetails.css
+++ b/client/src/pages/placeDetails/placeDetails.css
@@ -54,6 +54,10 @@ article {
 }
 .details {
   flex: 3;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  gap: 20px;
 }
 
 .location {
