--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -33,7 +33,10 @@
   gap: 10px;
   align-items: center;
 }
-
+.heart {
+  color: red;
+  cursor: pointer;
+}
 @media (max-width: 1368px) {
   .cardContainer {
     width: 450px;
